--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title><%= content_for(:title) || "Airbnb" %></title>
+    <%= favicon_link_tag 'favicon.ico' %>
+
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
@@ -10,7 +12,6 @@
 
     <%= yield :head %>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="/icon.png" type="image/png">
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
