Add active storage property and show product images

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,9 +19,9 @@
       <% @properties.each do |property| %>
         <a href="#" class="group">
           <div class="aspect-h-2 aspect-w-2 w-full overflow-hidden rounded-lg bg-gray-200">
-            <img src="https://a0.muscache.com/im/pictures/miso/Hosting-48655909/original/ec8545fa-3fe6-4220-9e90-8c8fa7de35af.jpeg?im_w=1200" 
-                  alt="Tall slender porcelain bottle with natural clay textured body and cork stopper." 
-                  class="min-h-[200px] max-h-[200px] h-full w-full object-cover object-center group-hover:opacity-75">
+            <%= image_tag property.image_url,
+            alt:"Product image",
+            class:"min-h-[200px] max-h-[200px] h-full w-full object-cover object-center group-hover:opacity-75"%>
           </div>
           <h3 class="mt-4 text-sm text-gray-700"> <%= property.name %></h3>
           <h3 class="mt-1 text-sm text-gray-700"> <%= property.state %>, <%= property.country %> </h3>
