--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,7 +23,8 @@
             alt:"Product image",
             class:"min-h-[200px] max-h-[200px] h-full w-full object-cover object-center group-hover:opacity-75"%>
           </div>
-          <h3 class="mt-4 text-sm text-gray-700"> <%= property.name %></h3>
+          <h5 class="mt-4 text-sm text-gray-700"> Rating <%= format('%.1f', property.average_rating) %> </h5>
+          <h3 class="mt-1 text-sm text-gray-700"> <%= property.name %></h3>
           <h3 class="mt-1 text-sm text-gray-700"> <%= property.state %>, <%= property.country %> </h3>
           <p class="mt-1 text-lg font-medium text-gray-900"> <%= property.price %> BDT night</p>
         </a>
