--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,7 +23,13 @@
             alt:"Product image",
             class:"min-h-[200px] max-h-[200px] h-full w-full object-cover object-center group-hover:opacity-75"%>
           </div>
-          <h5 class="mt-4 text-sm text-gray-700"> Rating <%= format('%.1f', property.average_rating) %> </h5>
+          <div class="flex justify-between text-sm text-gray-700 mt-4">
+            <span class="left-text"> Rating <%= format('%.1f', property.average_rating) %> </span>
+            <span class="right-text cursor-pointer"
+                  data-controller="wishlist"
+                  data-action="click->wishlist#updateWishlistStatus"> 
+            </span>
+          </div>
           <h3 class="mt-1 text-sm text-gray-700"> <%= property.name %></h3>
           <h3 class="mt-1 text-sm text-gray-700"> <%= property.state %>, <%= property.country %> </h3>
           <p class="mt-1 text-lg font-medium text-gray-900"> <%= property.price %> BDT night</p>
